[tool.poetry]
name = "repl_python3_WhimsicalModernBug"
version = "0.1.0"
description = ""
authors = ["dzenfone819 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pyperclip = "^1.8.2"
pyinstaller = "^4.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
